Fix post padding overflow.

--- a/src/components/PostList/PostList.css
+++ b/src/components/PostList/PostList.css
@@ -1,3 +1,9 @@
 .PostList {
   margin-left: 400px;
 }
+
+@media (max-width: 767px) {
+  .PostList {
+    margin-left: 0;
+  }
+}
